[SDC-DIST] Upgrade asdc-controller to use client version 2.0.0
Signed-off-by: efiacor <fiachra.corcoran@est.tech>
Issue-ID: DMAAP-1789
Change-Id: Icd08dcc39dd86eb2d0efdbdfd583b16d26a41627